[gd_scene load_steps=5 format=3 uid="uid://cqur83d6dqocf"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_grtwt"]
[ext_resource type="Script" path="res://Scenes/AppBar/Scripts/app_bar.gd" id="1_lm3o7"]
[ext_resource type="PackedScene" uid="uid://dsds4ja55fu4e" path="res://Scenes/AppBar/title_bar.tscn" id="2_kqjy6"]
[ext_resource type="PackedScene" uid="uid://bch2undeeqhje" path="res://Scenes/AppBar/scene_scroll_button_bar.tscn" id="4_eob71"]

[node name="AppBar" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_grtwt")
script = ExtResource("1_lm3o7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_grtwt")
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_grtwt")

[node name="TitleBar" parent="ColorRect/VBoxContainer" instance=ExtResource("2_kqjy6")]
layout_mode = 2

[node name="SceneScrollButtonBar" parent="ColorRect/VBoxContainer" instance=ExtResource("4_eob71")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 4
